# autodark-rust

./: .gitignore  Cargo.toml  config.toml  project.inlang.json  readme.md
.github/workflows/: release.yml  rust.yml
lib/eframe-0.22.0/: .cargo_vcs_info.json  Cargo.toml
lib/winreg-0.51.0/: .cargo_vcs_info.json
src/: main.rs
